code/chapter7/httpbin.virtualservice.fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin.default.svc.cluster.local
  http:
  - match:
    - sourceLabels:
        version: v1
    route:
      - destination:
          host: httpbin.default.svc.cluster.local
    fault:
      abort:
        httpStatus: 500
        percent: 100
  - route:
    - destination:
        host: httpbin.default.svc.cluster.local
