code/chapter7/httpbin.virtualservice.timeout.retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: httpbin.default.svc.cluster.local
      retries:
          attempts: 6
          perTryTimeout: 1s
      timeout: 7s
